// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts/:account/recalls Recalls GET /:accountId/recalls should fetch all recalls for the account 1`] = `
Object {
  "entities": Object {
    "recalls": Object {
      "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "id": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "primaryType": "sms",
      },
      "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "id": "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "primaryType": "sms",
      },
    },
  },
  "result": Array [
    "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
    "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  ],
}
`;

exports[`/api/accounts/:account/recalls Recalls POST /:accountId/recalls should create a recall for the account 1`] = `
Object {
  "entities": Object {
    "recalls": Object {
      "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "id": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "primaryType": "sms",
      },
    },
  },
  "result": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;

exports[`/api/accounts/:account/recalls Recalls PUT /:accountId/recalls/:recallId should update a recall for the account 1`] = `
Object {
  "entities": Object {
    "recalls": Object {
      "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "id": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "primaryType": "phone",
      },
    },
  },
  "result": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;
